--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     }
 
     .container {
-      max-width: 900px;
+      max-width: 800px;
       margin: 40px auto;
       padding: 30px;
       background: white;
@@ -94,75 +94,44 @@
       color: #721c24;
     }
 
-    /* NOVO: cards de cursos */
+    /* Estilo dos cards de cursos */
     #listaCursos {
+      margin-top: 20px;
       display: flex;
       flex-wrap: wrap;
       gap: 15px;
-      margin-top: 15px;
     }
 
     .curso-card {
       background: var(--roxo-claro);
       border-radius: var(--radius);
-      box-shadow: var(--sombra);
       padding: 15px;
-      width: 260px;
+      box-shadow: var(--sombra);
+      width: calc(50% - 15px);
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      min-height: 120px;
     }
 
     .curso-titulo {
       font-weight: bold;
-      font-size: 18px;
-      margin-bottom: 10px;
       color: var(--roxo);
+      font-size: 1.1em;
+      margin-bottom: 10px;
     }
 
-    .curso-botoes {
-      display: flex;
-      justify-content: space-between;
-      gap: 10px;
-    }
-
-    .favorito {
-      background-color: #ffcc00;
-      color: #333;
-      border-radius: var(--radius);
-      padding: 5px 10px;
-      cursor: pointer;
-      border: none;
-      transition: background-color 0.3s;
-    }
-
-    .favorito.favoritado {
-      background-color: #ffaa00;
+    .curso-botoes button {
+      width: 48%;
+      margin-right: 4%;
       font-weight: bold;
+      font-size: 0.9em;
     }
 
-    .matricular {
-      background-color: var(--roxo);
-      color: white;
-      border-radius: var(--radius);
-      padding: 5px 10px;
-      border: none;
-      cursor: pointer;
-      transition: background-color 0.3s;
+    .curso-botoes button:last-child {
+      margin-right: 0;
     }
 
-    .matricular:hover {
-      background-color: #4b0082;
-    }
-
-    #cursosConcluidos {
-      margin-top: 15px;
-      list-style: inside square;
-    }
-
-    #avaliacoes p {
-      margin: 5px 0;
-    }
   </style>
 </head>
 <body>
@@ -180,14 +149,29 @@
 
       <button onclick="fazerLogin()">Entrar</button>
       <div id="erroLogin" class="mensagem erro hidden"></div>
+
+      <h3>Buscar Cursos</h3>
+      <input
+        type="text"
+        id="campoBusca"
+        placeholder="Digite o nome exato do curso"
+        oninput="filtrarCursos()"
+      />
+      <div id="listaCursos"></div>
     </div>
 
     <div id="sistema" class="hidden">
       <h2>Bem-vindo, <span id="usuarioNome"></span>!</h2>
       <button onclick="fazerLogout()">Sair</button>
 
-      <h3>Lista de Cursos</h3>
-      <div id="listaCursos"></div>
+      <h3>Buscar Cursos</h3>
+      <input
+        type="text"
+        id="campoBuscaSistema"
+        placeholder="Digite o nome exato do curso"
+        oninput="filtrarCursosSistema()"
+      />
+      <div id="listaCursosSistema"></div>
 
       <h3>Cursos Concluídos</h3>
       <ul id="cursosConcluidos"></ul>
@@ -213,7 +197,6 @@
       "Python para Iniciantes",
       "Testes de Software",
     ];
-
     let cursosConcluidos = [];
     let avaliacoes = [];
     let favoritos = new Set();
@@ -228,12 +211,12 @@
         document.getElementById("loginForm").classList.add("hidden");
         document.getElementById("sistema").classList.remove("hidden");
         document.getElementById("usuarioNome").textContent = login;
-
-        cursosConcluidos = []; 
+        cursosConcluidos = [];
         atualizarCursosConcluidos();
         atualizarAvaliacoes();
-        popularCursos();
+        filtrarCursosSistema();
         iniciarTimerInatividade();
+        erro.classList.add("hidden");
       } else {
         erro.textContent = "Login ou senha incorretos.";
         erro.classList.remove("hidden");
@@ -247,43 +230,80 @@
         document.getElementById("login").value = "";
         document.getElementById("senha").value = "";
         clearTimeout(inatividadeTimer);
+        limparSistema();
+        filtrarCursos();
       }
     }
 
-    function popularCursos() {
+    function filtrarCursos() {
+      const textoBusca = document.getElementById("campoBusca").value;
       const container = document.getElementById("listaCursos");
       container.innerHTML = "";
 
-      cursos.forEach(curso => {
-        const card = document.createElement("div");
-        card.className = "curso-card";
+      let cursosFiltrados;
+      if (textoBusca === "") {
+        cursosFiltrados = cursos;
+      } else {
+        cursosFiltrados = cursos.filter((curso) => curso === textoBusca);
+      }
 
-        const titulo = document.createElement("div");
-        titulo.className = "curso-titulo";
-        titulo.textContent = curso;
+      cursosFiltrados.forEach((curso) => {
+        const card = criarCardCurso(curso, false);
+        container.appendChild(card);
+      });
+    }
 
+    function filtrarCursosSistema() {
+      const textoBusca = document.getElementById("campoBuscaSistema").value;
+      const container = document.getElementById("listaCursosSistema");
+      container.innerHTML = "";
+
+      let cursosFiltrados;
+      if (textoBusca === "") {
+        cursosFiltrados = cursos;
+      } else {
+        cursosFiltrados = cursos.filter((curso) => curso === textoBusca);
+      }
+
+      cursosFiltrados.forEach((curso) => {
+        const card = criarCardCurso(curso, true);
+        container.appendChild(card);
+      });
+    }
+
+    function criarCardCurso(curso, noSistema) {
+      const card = document.createElement("div");
+      card.className = "curso-card";
+
+      const titulo = document.createElement("div");
+      titulo.className = "curso-titulo";
+      titulo.textContent = curso;
+
+      card.appendChild(titulo);
+
+      if (noSistema) {
         const botoes = document.createElement("div");
         botoes.className = "curso-botoes";
 
-        // Botão favoritar
         const btnFavorito = document.createElement("button");
         btnFavorito.className = "favorito";
-        btnFavorito.textContent = favoritos.has(curso) ? "★ Favoritado" : "☆ Favoritar";
+        btnFavorito.textContent = favoritos.has(curso)
+          ? "★ Favoritado"
+          : "☆ Favoritar";
         btnFavorito.onclick = () => {
           if (favoritos.has(curso)) {
             favoritos.delete(curso);
           } else {
             favoritos.add(curso);
           }
-          popularCursos(); 
+          filtrarCursosSistema();
         };
 
-  
         const btnMatricular = document.createElement("button");
         btnMatricular.className = "matricular";
         btnMatricular.textContent = "Matricular";
         btnMatricular.onclick = () => {
-        
+  
           cursosConcluidos.push(curso);
           atualizarCursosConcluidos();
           atualizarAvaliacoes();
@@ -293,16 +313,16 @@
         botoes.appendChild(btnFavorito);
         botoes.appendChild(btnMatricular);
 
-        card.appendChild(titulo);
         card.appendChild(botoes);
-        container.appendChild(card);
-      });
+      }
+
+      return card;
     }
 
     function atualizarCursosConcluidos() {
       const ul = document.getElementById("cursosConcluidos");
       ul.innerHTML = "";
-      cursosConcluidos.forEach(curso => {
+      cursosConcluidos.forEach((curso) => {
         const li = document.createElement("li");
         li.textContent = curso;
         ul.appendChild(li);
@@ -312,7 +332,7 @@
     function atualizarAvaliacoes() {
       const select = document.getElementById("cursoAvaliar");
       select.innerHTML = "";
-      cursosConcluidos.forEach(curso => {
+      cursosConcluidos.forEach((curso) => {
         const opt = document.createElement("option");
         opt.value = curso;
         opt.textContent = curso;
@@ -325,13 +345,13 @@
       const nota = parseInt(document.getElementById("nota").value);
       const output = document.getElementById("avaliacoes");
 
-      if (!curso || isNaN(nota)) {
-        alert("Selecione um curso e uma nota válida entre 1 e 5.");
+      if (!curso || isNaN(nota) || nota < 1) {
+        alert("Selecione um curso e uma nota válida (maior ou igual a 1).");
         return;
       }
 
       avaliacoes.push({ curso, nota });
-      output.innerHTML += `<p>Você avaliou <strong>${curso}</strong> com nota <strong>${nota}</strong>/5.</p>`;
+      output.innerHTML = `<p>Você avaliou <strong>${curso}</strong> com nota <strong>${nota}</strong>/5.</p>`;
       document.getElementById("nota").value = "";
     }
 
@@ -343,9 +363,24 @@
     function iniciarTimerInatividade() {
       document.onmousemove = document.onkeypress = () => {
         clearTimeout(inatividadeTimer);
-        inatividadeTimer = setTimeout(() => alert("Você está inativo há um tempo. Deseja continuar?"), 60000);
+        inatividadeTimer = setTimeout(() => {
+          alert("Você está inativo há um tempo. Deseja continuar?");
+        }, 60000);
       };
     }
+
+    function limparSistema() {
+      favoritos.clear();
+      cursosConcluidos = [];
+      avaliacoes = [];
+      document.getElementById("cursoAvaliar").innerHTML = "";
+      document.getElementById("cursosConcluidos").innerHTML = "";
+      document.getElementById("avaliacoes").innerHTML = "";
+      document.getElementById("campoBuscaSistema").value = "";
+      document.getElementById("listaCursosSistema").innerHTML = "";
+    }
+
+    filtrarCursos();
   </script>
 </body>
 </html>
