--- a/index.html
+++ b/index.html
@@ -51,12 +51,19 @@
       font-weight: bold;
     }
 
-    input, select {
+    input, select, textarea {
       width: 100%;
       padding: 10px;
       border: 1px solid var(--cinza);
       border-radius: var(--radius);
       margin-top: 5px;
+      resize: none;
+      font-family: inherit;
+      font-size: 1em;
+    }
+
+    textarea {
+      height: 100px;
     }
 
     button {
@@ -95,7 +102,7 @@
     }
 
     /* Estilo dos cards de cursos */
-    #listaCursos {
+    #listaCursos, #listaCursosSistema {
       margin-top: 20px;
       display: flex;
       flex-wrap: wrap;
@@ -173,8 +180,8 @@
       />
       <div id="listaCursosSistema"></div>
 
-      <h3>Cursos Concluídos</h3>
-      <ul id="cursosConcluidos"></ul>
+      <h3>Cursos Matriculados</h3>
+      <textarea id="caixaMatriculados" readonly></textarea>
 
       <h3>Avaliar Curso</h3>
       <label for="cursoAvaliar">Curso:</label>
@@ -202,6 +209,19 @@
     let favoritos = new Set();
     let inatividadeTimer;
 
+    function salvarMatriculas() {
+      localStorage.setItem("matriculas", JSON.stringify(cursosConcluidos));
+    }
+
+    function carregarMatriculas() {
+      const data = localStorage.getItem("matriculas");
+      if (data) {
+        cursosConcluidos = JSON.parse(data);
+      } else {
+        cursosConcluidos = [];
+      }
+    }
+
     function fazerLogin() {
       const login = document.getElementById("login").value;
       const senha = document.getElementById("senha").value;
@@ -211,8 +231,8 @@
         document.getElementById("loginForm").classList.add("hidden");
         document.getElementById("sistema").classList.remove("hidden");
         document.getElementById("usuarioNome").textContent = login;
-        cursosConcluidos = [];
-        atualizarCursosConcluidos();
+        carregarMatriculas();
+        atualizarCaixaMatriculados();
         atualizarAvaliacoes();
         filtrarCursosSistema();
         iniciarTimerInatividade();
@@ -225,6 +245,7 @@
 
     function fazerLogout() {
       if (confirm("Deseja realmente sair?")) {
+        salvarMatriculas();
         document.getElementById("sistema").classList.add("hidden");
         document.getElementById("loginForm").classList.remove("hidden");
         document.getElementById("login").value = "";
@@ -299,14 +320,15 @@
           filtrarCursosSistema();
         };
 
+       
         const btnMatricular = document.createElement("button");
         btnMatricular.className = "matricular";
         btnMatricular.textContent = "Matricular";
         btnMatricular.onclick = () => {
-  
           cursosConcluidos.push(curso);
-          atualizarCursosConcluidos();
+          atualizarCaixaMatriculados();
           atualizarAvaliacoes();
+          salvarMatriculas();
           alert(`Você se matriculou no curso: ${curso}`);
         };
 
@@ -319,14 +341,10 @@
       return card;
     }
 
-    function atualizarCursosConcluidos() {
-      const ul = document.getElementById("cursosConcluidos");
-      ul.innerHTML = "";
-      cursosConcluidos.forEach((curso) => {
-        const li = document.createElement("li");
-        li.textContent = curso;
-        ul.appendChild(li);
-      });
+
+    function atualizarCaixaMatriculados() {
+      const caixa = document.getElementById("caixaMatriculados");
+      caixa.value = cursosConcluidos.join("\n");
     }
 
     function atualizarAvaliacoes() {
@@ -349,7 +367,7 @@
         alert("Selecione um curso e uma nota válida (maior ou igual a 1).");
         return;
       }
-
+      
       avaliacoes.push({ curso, nota });
       output.innerHTML = `<p>Você avaliou <strong>${curso}</strong> com nota <strong>${nota}</strong>/5.</p>`;
       document.getElementById("nota").value = "";
@@ -371,13 +389,12 @@
 
     function limparSistema() {
       favoritos.clear();
-      cursosConcluidos = [];
       avaliacoes = [];
       document.getElementById("cursoAvaliar").innerHTML = "";
-      document.getElementById("cursosConcluidos").innerHTML = "";
       document.getElementById("avaliacoes").innerHTML = "";
       document.getElementById("campoBuscaSistema").value = "";
       document.getElementById("listaCursosSistema").innerHTML = "";
+      document.getElementById("caixaMatriculados").value = "";
     }
 
     filtrarCursos();
