--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <input
         type="text"
         id="campoBuscaSistema"
-        placeholder="Digite o nome exato do curso"
+        placeholder="Digite o nome do curso"
         oninput="filtrarCursosSistema()"
       />
       <div id="listaCursosSistema"></div>
@@ -199,10 +199,10 @@
     const usuario = { login: "testador", senha: "teste" };
     const cursos = [
       "HTML Básico",
-      "CSS Avançado",
+      "Java Avançado",
       "JavaScript Intermediário",
       "Python para Iniciantes",
-      "Testes de Software",
+      "Guia QA Intermediário",
     ];
     let cursosConcluidos = [];
     let avaliacoes = [];
