--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <input
         type="text"
         id="campoBusca"
-        placeholder="Digite o nome exato do curso"
+        placeholder="Digite o nome do curso"
         oninput="filtrarCursos()"
       />
       <div id="listaCursos"></div>
